# usbCamera

./: .gitignore  README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/cn/usbfacedetect/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: camera_util.cpp  camera_util.h
app/src/main/java/cn/usbfacedetect/: Global.java  MyApplication.java
app/src/main/java/cn/usbfacedetect/bean/: UsbError.java  UsbLog.java  UserInfo.java
app/src/main/java/cn/usbfacedetect/imp/: OnCameraDataImp.java
app/src/main/java/cn/usbfacedetect/main/: ErrorActivity.java  Msg_LActivity.java  USBCameraUtil.java  UsbCameraActivity.java  WelcomeActivity.java
app/src/main/java/cn/usbfacedetect/netokhttp/: NetOkhttp.java
app/src/main/java/cn/usbfacedetect/receiver/: NetworkStateReceiver.java
app/src/main/java/cn/usbfacedetect/util/: AppUtil.java  CameraUtil.java  CarshHandlerUtil.java  DialogUtil.java  FileUtil.java  ImageUtil.java  KeyboradUtil.java  NetWorkUtil.java  SPUtil.java  ScreenSwitchUtils.java  ScreenUtil.java  TextUtil.java  TimeUtil.java  ToastUtil.java
app/src/main/java/cn/usbfacedetect/util/glide/: GlideUtil.java  ProjectGlideModule.java
app/src/main/java/cn/usbfacedetect/view/: FaceOverlayViewCompare.java  FaceResult.java  MyVideoView.java
app/src/main/res/layout/: activity_error.xml  activity_msg_bl.xml  activity_usbcamera.xml  activity_welcome.xml  common_toast.xml
app/src/main/res/values/: strings.xml
app/src/test/java/cn/usbfacedetect/: ExampleUnitTest.java
(+6 files in other folders)
